--- a/school/css/style.css
+++ b/school/css/style.css
@@ -1,231 +1,238 @@
+
+/* -------------------------------------*/
+
 body {
-	font-family: AvenirNextLTPro-Heavy;
-	font-weight: normal;
-	font-style: normal;
-	/* font-family: Helvetica, Arial, sans-serif; */
-	/* font-family: 'Open Sans', sans-serif; */
+  font-family: sans-serif;
+  color: #3B2314;
+}
+.container {
+  max-width: 750px;
+}
+a {
+  text-decoration: none !important;
+  color: #cc0000;
+  opacity: .6;
+  -webkit- transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+}
+a:hover {
+  color: #cc0000;
+  opacity: 1;
+}
+a.inherit-link, a.inherit-link:hover {
+  color: inherit !important;
 }
 
-
-.headline h4 {
-	color: #3B2314;
-	font-size: 59px;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-	text-transform: uppercase;
-	margin-top: 50px;
-}
-.headline h5 {
-	color: #3B2314;
-	font-weight: 300;
-	font-size: 36px;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-	text-transform: uppercase;
-}
-
+/* Content */
 div.fb_logo {
-	position: absolute;
-	top: 20px;
-	right: 20px;
+  position: absolute;
+  top: 0px;
+  right: 50px;
 }
-	.fb_logo p {
-		padding: 10px 10px 0 0;
-	}
-	.fb_logo img {
-		width: 40px;
-	}
-
-
+div.yt_logo {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+.fb_logo img, .yt_logo img {
+  width: 40px;
+}
 .logo {
-	position: relative;
-	margin: -576px 0 -100px -80px;
-	z-index: 20;
+  position: relative;
+  z-index: 20;
+  width: 100px;
+  height: auto;
 }
-
 .main_content {
-	width: 100%;
-	height: auto;
-	margin-bottom: -57px;
-	margin-top: -250px;
+  width: 100%;
+  height: auto;
+}
+.container h1, .container h2, .container h3 {
+  line-height: 15px;
+  font-size: 15px;
+  letter-spacing: 2.5px;
+  padding: 0;
+  text-transform: uppercase;
+  margin: 0;
+}
+.container h1, .container h2  {
+  font-weight: bold;
+}
+.container h3 {
+  font-size: 13px;
 }
 
-.content {
-	margin-top: -250px;
+/* Table */
+table {
+  text-align: center;
+  width: 100%;
 }
-.content h1 {
-	line-height: 34px;
-	font-size: 28px;
-	letter-spacing: 2.5px;
-	margin: 0;
-	padding: 0;
-	color: #3B2314;
-	padding: 10px 0px 5px 0px;
-	text-transform: uppercase;
+td {
+  padding: 1em;
 }
-.content h2 {
-	line-height: 34px;
-	font-size: 29px;
-	letter-spacing: 1.5px;
-	margin: 0;
-	padding: 0;
-	color: #3B2314;
-	text-align: center;
-	padding: 10px 0px 5px 0px;
-	text-transform: uppercase;
+table, td {
+  border: 1px solid #3B2314;
 }
-.content h3 {
-	color: #3B2314;
-	font-size: 20px;
-	line-height: 34px;
-	margin: 0;
-	padding: 10px 0 5px 0;
-	letter-spacing: 1.5px;
-	font-weight: 200;
-	text-transform: uppercase;
-}
-.content h4 {
-	font-size: 20px;
-	color: #3B2314;
-	display: block;
-	width: 100%;
-	margin: 0px;
-	padding: 10px 0px 5px 0px;
-	text-align: center;
-	text-transform: uppercase;
-	letter-spacing: 1.5px;
-	border-top: 1px solid #3B2314;
-	border-bottom: 1px solid #3B2314;
-}
-.centered {
-}
-.centered p{
-	margin: 0 auto;
-	text-align: center;
-}
-.center {
-	text-align: center;
-	border-right: 1px solid #633E28;
-	border-left: 1px solid #633E28;
-}
-.bg {
-	background: #fff;
-}
-.bg1 {
-background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 28%, rgba(255,255,255,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(28%,rgba(255,255,255,0.9)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.9) 28%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.9) 28%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.9) 28%,rgba(255,255,255,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.9) 28%,rgba(255,255,255,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+.table-wrap {
+  margin-bottom: 1em;
+  background-color: #fff;
+  opacity: .8;
 }
 
-.light {
-	font-weight: 200;
+/* Presentation */
+.presentation {
+  padding-top: 50%; 
 }
-.border {
-	border-bottom: 1px solid #633E28; 
-}
-.border1 {
-	border-bottom: 1px solid #633E28;
-	border-right: 1px solid #633E28; 
-}
-.border2 {
-	border-right: 1px solid #633E28; 
-	border-left: 1px solid #633E28; 
-}
-.float {
-	float:left;
+.container {
+  background: url(../img/meat.jpg) no-repeat top center;
+  background-size: 80%;
+  padding-top: 2em;
 }
 
-
-
-.food {
-	width: 38%;
-	text-align: right;
-	padding-right: 50px !important;
-	border-left: 1px solid #633E28;
-}
-.drink {
-	width: 20%;
-	text-align: center;
-}
-.design {
-	width: 42%;
-	text-align: left;
-	border-right: none;
-	padding-left: 50px !important;
-	border-right: 1px solid #633E28;
-}
-.hamilton {
-	width: 58%;
-	text-align: right;
-	border-right: 1px solid #633E28;
-	border-left: 1px solid #633E28;
-	padding-right: 50px !important;
-	border-bottom: 1px solid #633E28;
-}
-.date {
-	width: 42%;
-	text-align: left;
-	padding-left: 60px !important;
-	border-right: 1px solid #633E28;
-	border-bottom: 1px solid #633E28;
-}
-
-
-.pt10 {
-	padding-top: 10px !important;
-}
-
-
-/* Typography from MyFonts.com */
-
-.AvenirNextLTPro-Heavy { 
-	font-family: AvenirNextLTPro-Heavy;
-	font-weight: normal;
-	font-style: normal;
-}
-.AvenirNextLTPro-UltLt { 
-	font-family: AvenirNextLTPro-UltLt;
-	font-weight: normal;
-	font-style: normal;
-}
-
+/* Magner Logo */
 .mslogo {
-	float: right;	
+  float: right; 
 }
-	.mslogo p {
-		line-height: 30px;
-		float: right;
-		font-size: 18px;
-	}
-	.mslogo p span {
-		float: left;
-	}
-	.mslogo img{
-		float: right;
-		margin: 5px 0 20px 0;
-		width: 150px;
-	}
-	
-div.newsletter {
-	margin: 5px 0 0 0;
+  .mslogo p {
+    line-height: 30px;
+    float: right;
+    font-size: 12px;
+  }
+  .mslogo p span {
+    float: left;
+  }
+  .mslogo img{
+    float: right;
+    width: 150px;
+    padding-top: 3px;
+    padding-left: 5px;
+  }
+/*****************************************
+          Gallery Stylings
+**************************************** */
+
+.page-fade {
+  opacity: 0.1;
 }
-	.newsletter label {
-		padding: 5px 0 0 0;
-		font-size: 16px;
-	}
-	.newsletter input {
-		border: 1px solid #633E28;
-		font-size: 10px;
-		padding: 5px;
-	}
-	
-	.newsletter input[type="submit"] {
-		background: #633E28;
-		color: #ffffff;
-	}
+#gallery {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.front {
+  width: 100%;
+  margin: 0px 0px;
+  cursor: pointer;
+} 
+.front img {
+    width: 100%;
+    height: auto;
+}
+.back img {
+    width: 100%;
+  height: auto;
+}
+.info-mod p {
+  margin-bottom: 0;
+}
+.info-mod a {
+  display: inline-block;
+  padding-top: 0.5em;
+}
+.info-mod img {
+  width: 100%;
+}
+.contact-info {
+  margin-bottom: 20px;
+}
+.cardWrapper{
+    padding: 0;
+    display: inline-block;
+  width: 25%;
+    margin: 0;
+  cursor: pointer;
+    position: relative;
+}
+.info-mod {
+  width:100%;
+  float: left;
+  display: none;
+  border-bottom: 4px solid #3B2314;
+  padding: 2% 1% 0 1%;
+}
+.info-mod-col {
+  display: inline-block;
+  width: 25%;
+  vertical-align: top;
+  padding: 0 1% 4% 1%;
+}
+
+/* gallery */
+
+@media(max-width:768px) {
+  .cardWrapper, .info-mod-col {
+    width: 33.333333333%;
+  }
+  .info-mod {
+    padding: 4% 2% 0 2%;
+  }
+  .info-mod-col {
+    padding: 0 2% 8% 2%;
+  }
+  .info-contact {
+    width: 100%;
+  }
+}
+
+  
+  
+  
+/* ----------------------------------*/
+  
+  * {
+  margin: 0;
+  padding: 0;
+}
+.cardWrapper {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  width: 25%;
+  padding-top: 25%;
+  margin: -2px;
+}
+.cardWrapper:hover > .first {
+  left: -100%;
+  top: -100%;
+}
+.cardWrapper:hover > .second {
+  left: 100%;
+  top: 100%;
+}
+.first {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transition: left 0.5s 0.5s, top 0.5s 0.5s;
+}
+.second {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transition: left 0.5s 0.5s, top 0.5s 0.5s;
+}
+.third {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+  
