--- a/school/css/style.css
+++ b/school/css/style.css
@@ -1,6 +1,3 @@
-
-/* -------------------------------------*/
-
 body {
   font-family: sans-serif;
   color: #3B2314;
@@ -185,15 +182,8 @@ table, td {
   }
 }
 
-  
-  
-  
 /* ----------------------------------*/
-  
-  * {
-  margin: 0;
-  padding: 0;
-}
+
 .cardWrapper {
   display: inline-block;
   position: relative;
@@ -202,47 +192,96 @@ table, td {
   padding-top: 25%;
   margin: -2px;
 }
-
-/*Commented out and created other classes for jQuery script to work*/
-/*.cardWrapper:hover > .first {
-  left: -100%;
+.cardWrapper:hover > .first {
   top: -100%;
 }
 .cardWrapper:hover > .second {
-  left: 100%;
-  top: 100%;
-}*/
-.first-hover {
-  left: -100% !important;
-  top: -100% !important;
-}
-.second-hover {
-  left: 100% !important;
-  top: 100% !important;
+  bottom: -100%;
 }
 .first {
+  background: url(../first.jpg) no-repeat, transparent;
+  background-size: 100% auto;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  height: 50.208333%;
 
-  transition: left 0.1s 0.1s, top 0.5s 0.5s;
+  -webkit-transition: top 0.4s 0.1s;
+  -moz-transition: top 0.4s 0.1s;
+  -o-transition: top 0.4s 0.1s;
+  transition: top 0.4s 0.1s;
 }
 .second {
+  background: url(../second.jpg) no-repeat;
+  background-size: 100% auto;
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: 0;
   width: 100%;
-  height: 100%;
+  height: 50.208333%;
 
-  transition: left 0.1s 0.1s, top 0.5s 0.5s;
+  -webkit-transition: bottom 0.4s 0.1s;
+  -moz-transition: bottom 0.4s 0.1s;
+  -o-transition: bottom 0.4s 0.1s;
+  transition: bottom 0.4s 0.1s;
 }
 .third {
+  background: url(../third.jpg);
+  background-size: 100% auto;
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
+}
+
+/* gallery */
+
+@media(max-width:768px) {
+  .cardWrapper, .info-mod-col {
+    width: 33.333333333%;
+    padding-top: 33.3333333333%;
+  }
+  .info-mod {
+    padding: 4% 2% 0 2%;
+  }
+  .info-mod-col {
+    padding: 0 2% 8% 2%;
+  }
+  .info-contact {
+    width: 100%;
+  }
+}
+@media(max-width: 480px) {
+  .cardWrapper {
+    width: 50%;
+    padding-top: 50%;
+  }
+  .info-mod {
+    padding: 8% 2% 8% 2%;
+  }
+  .info-mod-col {
+    width: 100%;
+    padding: 0 4% 8% 4%;
+  }
+}
+/* presentation */
+@media(max-width: 480px){
+  .container {
+    padding-top: 1em;
+  }
+  .logo {
+    width: 70px;
+  }
+  .container h1, .container h2, .container h3 {
+    font-size: 12px;
+  }
+  h3 a {
+    border: 1px solid #ff0000;
+    padding: 1em;
+    margin-top: 0.5em;
+    display: block;
+  }
+  .presentation {
+    padding-top: 40%;
 }
 
   
